@startuml
skinparam classAttributeIconSize 0

title REF DSL - Evolution Metamodel (P1)

package "Core" {
  class RefModel {
    name: String
    version: String
  }
}

package "Evolution" {
  class EvolutionRule {
    name: String
    fromVersion: String
    toVersion: String
    transformationId: String
  }

  class RefactoringOperation {
    name: String
    kind: RefactoringKind
    scriptId: String
  }

  enum RefactoringKind {
    RENAME_ELEMENT
    MOVE_ELEMENT
    SPLIT_ELEMENT
    MERGE_ELEMENT
    CHANGE_TYPE
  }
}

RefModel "1" o-- "*" EvolutionRule
EvolutionRule "1" o-- "1..*" RefactoringOperation : applies

note bottom of EvolutionRule
  Constraint:
  fromVersion must be different from toVersion.
end note

@enduml
